Fix Assets activation tab on mobile

--- a/views/interface/css/base.css
+++ b/views/interface/css/base.css
@@ -106,21 +106,21 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
   clear: both;
 }
 
-.pure-form input[type=password], 
-.pure-form input[type=email], 
-.pure-form input[type=url], 
-.pure-form input[type=date], 
-.pure-form input[type=month], 
-.pure-form input[type=time], 
-.pure-form input[type=datetime], 
-.pure-form input[type=datetime-local], 
-.pure-form input[type=week], 
-.pure-form input[type=tel], 
-.pure-form input[type=color], 
-.pure-form input[type=number], 
-.pure-form input[type=search], 
-.pure-form input[type=text], 
-.pure-form select, 
+.pure-form input[type=password],
+.pure-form input[type=email],
+.pure-form input[type=url],
+.pure-form input[type=date],
+.pure-form input[type=month],
+.pure-form input[type=time],
+.pure-form input[type=datetime],
+.pure-form input[type=datetime-local],
+.pure-form input[type=week],
+.pure-form input[type=tel],
+.pure-form input[type=color],
+.pure-form input[type=number],
+.pure-form input[type=search],
+.pure-form input[type=text],
+.pure-form select,
 .pure-form textarea {
   border: 1px solid #D9E3EB;
   background: #FFF;
@@ -379,6 +379,28 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
   top: 3.3em;
   width: 100%;
   text-align: center;
+}
+
+  /* Yes, this is redundant, but as long we work with JQuery, which is the problem atm, we do this with css */
+#topmenu-assets {
+  cursor: not-allowed;
+  color: rgba(255, 255, 255, .3);
+  text-shadow: none;
+}
+
+#topmenu-assets.active {
+  cursor: pointer;
+  color: #FFF;
+  text-shadow: none;
+  position: relative;
+}
+
+#topmenu-assets.active:hover {
+  text-shadow: 0px 0px 5px #FFF;
+}
+
+#topmenu-assets.active.selected {
+  color: #000;
 }
 
 #topmenu-logout {
@@ -778,8 +800,8 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 
 #action-send .modal-send-networkfee {
-  display: inline-block; 
-  color: #4DA1FF; 
+  display: inline-block;
+  color: #4DA1FF;
   word-wrap: break-word;
   font-weight: 600;
 }
